--- a/templates/main/includes/grid_produtos.html
+++ b/templates/main/includes/grid_produtos.html
@@ -1,33 +1,49 @@
+<div class="d-flex justify-content-start mb-3">
+    <form method="get" action="/">
+      <select name="categoria" class="form-select" onchange="this.form.submit()">
+        <option value="" {% if categoria_selecionada == "" %}selected{% endif %}>
+          Todas as Categorias
+        </option>
+        {% for categoria in categorias %}
+          <option value="{{ categoria.id }}" {% if categoria.id == categoria_selecionada|int %}selected{% endif %}>
+            {{ categoria.nome }}
+          </option>
+        {% endfor %}
+      </select>
+    </form>
+</div>
+
 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 row-cols-xxl-6 g-3 mt-0">
-    {% for p in produtos %}
-    <div class="col">
-        <div class="card h-100">
-            <a href="/produto/{{p.id}}">
-                <img src="/static/img/produtos/{{'{:04d}'.format(p.id)}}.jpg" class="card-img-top w-100">
-            </a>
-            <div class="card-body d-flex flex-column">
-                <h5 class="card-title text-center">
-                    <a href="/produto/{{p.id}}" class="text-decoration-none text-black">
-                        {{p.nome}}
-                    </a>
-                </h5>
-                <p class="card-text text-center texto-3-linhas">
-                    {{p.descricao}}
-                </p>
-                <p class="lead text-danger text-center mt-auto">
-                    R$ {{"{:,.2f}".format(p.preco)}}
-                </p>
-                <form method="post" action="/cliente/post_adicionar_carrinho">
-                    <p class="text-center mb-0">
-                        <input type="hidden" name="id_produto" value="{{p.id}}">
-                        <button class="btn btn-danger" type="submit">
-                            <i class="bi bi-cart-plus"></i>
-                            Adicionar ao Carrinho
-                        </button>
-                    </p>
-                </form>
-            </div>
-        </div>
+  {% for p in produtos %}
+  <div class="col">
+    <div class="card h-100">
+      <a href="/produto/{{p.id}}">
+        <img
+          src="/static/img/produtos/{{'{:04d}'.format(p.id)}}.jpg"
+          class="card-img-top w-100"
+        />
+      </a>
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title text-center">
+          <a href="/produto/{{p.id}}" class="text-decoration-none text-black">
+            {{p.nome}}
+          </a>
+        </h5>
+        <p class="card-text text-center texto-3-linhas">{{p.descricao}}</p>
+        <p class="lead text-danger text-center mt-auto">
+          R$ {{"{:,.2f}".format(p.preco)}}
+        </p>
+        <form method="post" action="/cliente/post_adicionar_carrinho">
+          <p class="text-center mb-0">
+            <input type="hidden" name="id_produto" value="{{p.id}}" />
+            <button class="btn btn-danger" type="submit">
+              <i class="bi bi-cart-plus"></i>
+              Adicionar ao Carrinho
+            </button>
+          </p>
+        </form>
+      </div>
     </div>
-    {% endfor %}
+  </div>
+  {% endfor %}
 </div>
